[package]
name = "irc"
version = "0.13.6"
description = "the irc crate – usable, async IRC for Rust "
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "MPL-2.0"
keywords = ["irc", "client", "thread-safe", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/irc/"
repository = "https://github.com/aatxe/irc"
readme = "README.md"

[badges]
travis-ci = { repository = "aatxe/irc" }
is-it-maintained-issue-resolution = { repository = "aatxe/irc" }
is-it-maintained-open-issues = { repository = "aatxe/irc" }

[features]
default = ["ctcp", "toml"]
ctcp = []
nochanlists = []
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
bytes = "0.4"
chrono = "0.4"
encoding = "0.2"
failure = "0.1"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.7", optional = true }
toml = { version = "0.4", optional = true }

[dev-dependencies]
args = "2.0"
getopts = "0.2"
